# antyperfectionism_habit_tracker

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 575a676ddcff_update_habits_and_habit_entries_tables.py  ccfb5c2c9eb2_init.py
backend/app/: config.py  constants.py  db.py  main.py  models.py
backend/app/models/: habit.py
backend/app/routers/: habit.py
backend/app/schemas/: habit.py
frontend/: .dockerignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.js  types.ts
frontend/src/components/: AddHabitModal.vue  Menu.vue
